New-Upload-1755854042013/objects/Profile_Layout_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Layout__c</fullName>
        <description>Name of the layout</description>
        <label>Layout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Access_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the related Page Access record</description>
        <label>Page Access Lookup</label>
        <referenceTo>Profile_Page_Access__c</referenceTo>
        <relationshipLabel>Layout Assignments by Page Access</relationshipLabel>
        <relationshipName>LayoutAssignsByPage</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Layout Assignments by Name</relationshipLabel>
        <relationshipName>Layout_Assignments_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Layout Assignments</relationshipLabel>
        <relationshipName>Layout_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a record type layout</description>
        <label>Record Type</label>
        <type>Checkbox</type>
    </fields>
    <label>Profile Layout Assignment</label>
    <nameField>
        <displayFormat>PLA-{0000}</displayFormat>
        <label>Layout Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Layout Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>